# fcgitest

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
include/fcgipp/: acceptor.hpp  authenticator.hpp  basic_acceptor.hpp  basic_authenticator.hpp  basic_dispatcher.hpp  basic_handler.hpp  basic_request_response.hpp  basic_server_request_response.hpp  default_authenticator.hpp  default_dispatcher.hpp  dispatcher.hpp  fcgi.hpp  fcgi_acceptor.hpp  fcgi_req_res.hpp  fcgi_request_response.hpp  fcgi_server_request_response.hpp  fcgipp.hpp  handler_response.hpp  handlers.hpp  http_handlers.hpp  http_method.hpp  req_res.hpp  request.hpp  server.hpp  uri_dispatcher.hpp
include/fcgipp/http/: default_handlers.hpp  method.hpp  response.hpp
include/fcgipp_shims/: asio_multiplexer.hpp  json11_shim.hpp
include/fcgisrv/: fcgisrv.hpp
lib/fcgi-2.4.0/: CMakeLists.txt  fcgi_config.h
lib/fcgi-2.4.0/examples/: echo-cpp.cpp
src/: main.cpp
src/fcgipp/: basic_acceptor.hpp  basic_dispatcher.hpp  basic_formatted_response.hpp  basic_handler.hpp  basic_multiplexer.hpp  basic_response.hpp  basic_scheduler.hpp  basic_server_request_response.hpp  default_authenticator.cpp  default_authenticator.hpp  default_dispatcher.cpp  default_dispatcher.hpp  dispatcher.cpp  fcgi_acceptor.cpp  fcgi_acceptor.hpp  fcgi_application.cpp  fcgi_application.hpp  fcgi_req_res.cpp  fcgi_request_response.cpp  fcgi_server_request_response.cpp  fcgi_server_request_response.hpp  handler_response.cpp  http_method.cpp  http_response.cpp  http_response.hpp  req_res.cpp  request.cpp  uri_dispatcher.cpp
src/fcgipp/default_handlers/: internal_server_error_handler.cpp  internal_server_error_handler.hpp  method_not_allowed_handler.cpp  method_not_allowed_handler.hpp  not_found_handler.cpp  not_found_handler.hpp  unauthorized_handler.cpp  unauthorized_handler.hpp
src/fcgipp/http/: default_http_internal_server_error_handler.cpp  default_http_internal_server_error_handler.hpp  default_http_method_not_allowed_handler.cpp  default_http_method_not_allowed_handler.hpp  default_http_not_found_handler.cpp  default_http_not_found_handler.hpp  default_http_unauthorized_handler.cpp  default_http_unauthorized_handler.hpp  method.cpp  response.cpp  response.hpp
src/fcgipp_shims/: asio_multiplexer.cpp  asio_multiplexer.hpp  asio_scheduler.cpp  asio_scheduler.hpp  json11_shim.cpp
src/fcgisrv/: basic_acceptor.hpp  basic_authenticator.hpp  basic_dispatcher.hpp  basic_formatted_response.hpp  basic_handler.hpp  basic_scheduler.hpp  basic_server_request_response.hpp  default_authenticator.cpp  default_authenticator.hpp  default_dispatcher.cpp  default_dispatcher.hpp  fcgi_acceptor.cpp  fcgi_acceptor.hpp  fcgi_application.cpp  fcgi_application.hpp  fcgi_server_request_response.cpp  fcgi_server_request_response.hpp  http_method.cpp  http_method.hpp  http_response.cpp  http_response.hpp
src/fcgisrv/default_handlers/: internal_server_error_handler.cpp  internal_server_error_handler.hpp  method_not_allowed_handler.cpp  method_not_allowed_handler.hpp  not_found_handler.cpp  not_found_handler.hpp  unauthorized_handler.cpp  unauthorized_handler.hpp
src/fcgisrv_shims/: asio_scheduler.cpp  asio_scheduler.hpp
src/handlers/: current_time_handler.cpp  current_time_handler.hpp  echo_handler.cpp  echo_handler.hpp
