CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(fcgi)

SET("FCGI_LIB_C_SOURCES"
    "${CMAKE_CURRENT_SOURCE_DIR}/libfcgi/fcgi_stdio.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/libfcgi/fcgiapp.c"
)

SET("FCGI_LIB_CXX_SOURCES"
    "${CMAKE_CURRENT_SOURCE_DIR}/libfcgi/fcgio.cpp"
)

SET("FCGI_INCLUDE"
    "${CMAKE_CURRENT_SOURCE_DIR}/include"
    "${CMAKE_CURRENT_SOURCE_DIR}/"
)

IF(${WIN32})
    SET("FCGI_LIB_C_SOURCES" "${FCGI_LIB_C_SOURCES}" "${CMAKE_CURRENT_SOURCE_DIR}/libfcgi/os_win32.c")
ELSE()
    SET("FCGI_LIB_C_SOURCES" "${FCGI_LIB_C_SOURCES}" "${CMAKE_CURRENT_SOURCE_DIR}/libfcgi/os_unix.c")
ENDIF()

SET_SOURCE_FILES_PROPERTIES("${FCGI_LIB_C_SOURCES}" PROPERTIES LANGUAGE C)

SET_SOURCE_FILES_PROPERTIES("${FCGI_LIB_CXX_SOURCES}" PROPERTIES LANGUAGE CXX)

ADD_LIBRARY("fcgi-lib" SHARED "")

TARGET_SOURCES("fcgi-lib" PRIVATE "${FCGI_LIB_C_SOURCES}" "${FCGI_LIB_CXX_SOURCES}")

TARGET_INCLUDE_DIRECTORIES("fcgi-lib" PUBLIC "${FCGI_INCLUDE}")

IF(${WIN32})
    TARGET_LINK_LIBRARIES("fcgi-lib" PRIVATE wsock32 ws2_32)
ENDIF()
